# statsbomb_analysis

./: pyproject.toml
src/: config.py  data_exploration.ipynb  utils.py
