[tool.poetry]
name = "statsbomb-analysis"
version = "0.1.0"
description = "Statsbomb analysis"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.11"
pandas = "^2.1.1"
numpy = "^1.26.0"
jupyter = "^1.0.0"
pytest = "^7.4.2"
matplotlib = "^3.8.1"
pyathena = "^3.0.10"
python-dotenv = "^1.0.0"
black = "^23.11.0"
ipykernel = "^6.29.5"
ipython = "^8.31.0"
statsbombpy = "^1.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
